Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -150,6 +150,7 @@
     "bank-accounts": "Comptes bancaris",
     "bank-mandate": "Mandat",
     "bank-mandate-date": "Data mandat",
+    "banking-movements": "Moviments bancaris",
     "barcode": "Codi de barres",
     "bcc": "CCO",
     "big": "Gran",
@@ -766,6 +767,7 @@
     "lang-code": "Codi d'idioma",
     "language": "Llenguatge",
     "languages-ca_ES": "Català",
+    "languages-cs_CZ": "Checo",
     "languages-de_DE": "Alemany",
     "languages-en_EN": "Anglès",
     "languages-es_AR": "Espanyol (Argentina)",
@@ -784,6 +786,8 @@
     "languages-fr_FR": "Francès",
     "languages-gl_ES": "Gallec",
     "languages-it_IT": "Italià",
+    "languages-pl_PL": "Polaco",
+    "languages-pt_BR": "Portugués (Brasil)",
     "languages-pt_PT": "Portuguès",
     "languages-va_ES": "Valencià",
     "last-activity": "Última activitat",
@@ -1169,6 +1173,8 @@
     "renumber-accounting": "Renumerar Assentaments",
     "renumber-accounting-error": "Hi ha hagut un error durant la renumeració d'assentaments en l'exercici fiscal %exerciseCode%",
     "renumber-accounting-ok": "Renumeració d'assentaments completada",
+    "renumber-accounting-p": "Renumera los asientos por fecha, de menor a mayor",
+    "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
     "repeat-new-password": "Repeteix la contrasenya",
     "reply": "Respuesta",
     "report": "Informe",
