--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -150,6 +150,7 @@
     "bank-accounts": "Bankkonten",
     "bank-mandate": "Bankmandat",
     "bank-mandate-date": "Datum Bankmandat",
+    "banking-movements": "Movimientos bancarios",
     "barcode": "Strichcode",
     "bcc": "BCC",
     "big": "Groß",
@@ -766,6 +767,7 @@
     "lang-code": "Sprachcode",
     "language": "Sprache:",
     "languages-ca_ES": "katalanisch",
+    "languages-cs_CZ": "Checo",
     "languages-de_DE": "Deutsch",
     "languages-en_EN": "Englisch",
     "languages-es_AR": "Español (Argentina)",
@@ -784,6 +786,8 @@
     "languages-fr_FR": "Französisch",
     "languages-gl_ES": "Galizisch",
     "languages-it_IT": "Italienisch",
+    "languages-pl_PL": "Polaco",
+    "languages-pt_BR": "Portugués (Brasil)",
     "languages-pt_PT": "Portugisisch",
     "languages-va_ES": "Valencianisch",
     "last-activity": "Letzte Aktivität",
@@ -1169,6 +1173,8 @@
     "renumber-accounting": "Buchungen neu nummerieren",
     "renumber-accounting-error": "Bei der Neunummerierung der Buchungen im Geschäftsjahr %exerciseCode% ist ein Fehler aufgetreten",
     "renumber-accounting-ok": "Neunummerierung der Buchungen abgeschlossen.",
+    "renumber-accounting-p": "Renumera los asientos por fecha, de menor a mayor",
+    "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
     "repeat-new-password": "Passwort wiederholen",
     "reply": "Respuesta",
     "report": "Bericht",
