--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -150,6 +150,7 @@
     "bank-accounts": "Bank accounts",
     "bank-mandate": "Mandate",
     "bank-mandate-date": "Mandate Date",
+    "banking-movements": "Banking movements",
     "barcode": "Barcode",
     "bcc": "BCC",
     "big": "Big",
@@ -766,6 +767,7 @@
     "lang-code": "Language code",
     "language": "Language",
     "languages-ca_ES": "Catalan",
+    "languages-cs_CZ": "Czech",
     "languages-de_DE": "German",
     "languages-en_EN": "English",
     "languages-es_AR": "Spanish (Argentina)",
@@ -784,6 +786,8 @@
     "languages-fr_FR": "French",
     "languages-gl_ES": "Galician",
     "languages-it_IT": "Italian",
+    "languages-pl_PL": "Polish",
+    "languages-pt_BR": "Portuguese (Brasil)",
     "languages-pt_PT": "Portuguese",
     "languages-va_ES": "Valencian",
     "last-activity": "Last activity",
@@ -1169,6 +1173,8 @@
     "renumber-accounting": "Renumber Accounting",
     "renumber-accounting-error": "An error occurred while renumber accounting entries in financial year %exerciseCode%",
     "renumber-accounting-ok": "Renumbering of accounting entries completed",
+    "renumber-accounting-p": "Renumera los asientos por fecha, de menor a mayor",
+    "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
     "repeat-new-password": "Repeat password",
     "reply": "Reply",
     "report": "Report",
