--- a/Core/Translation/es_DO.json
+++ b/Core/Translation/es_DO.json
@@ -150,6 +150,7 @@
     "bank-accounts": "Cuentas bancarias",
     "bank-mandate": "Mandato",
     "bank-mandate-date": "Fecha Mandato",
+    "banking-movements": "Movimientos bancarios",
     "barcode": "Código de barras",
     "bcc": "CCO",
     "big": "Grande",
@@ -766,6 +767,7 @@
     "lang-code": "Código de idioma",
     "language": "Idioma",
     "languages-ca_ES": "Catalán",
+    "languages-cs_CZ": "Checo",
     "languages-de_DE": "Alemán",
     "languages-en_EN": "Inglés",
     "languages-es_AR": "Español (Argentina)",
@@ -784,6 +786,8 @@
     "languages-fr_FR": "Francés (Francia)",
     "languages-gl_ES": "Gallego",
     "languages-it_IT": "Italiano",
+    "languages-pl_PL": "Polaco",
+    "languages-pt_BR": "Portugués (Brasil)",
     "languages-pt_PT": "Portugués (Portugal)",
     "languages-va_ES": "Valenciano",
     "last-activity": "Última conexión",
@@ -1169,6 +1173,8 @@
     "renumber-accounting": "Renumerar Asientos",
     "renumber-accounting-error": "Ha ocurrido un error durante la renumeración de asientos en el ejercicio fiscal %exerciseCode%",
     "renumber-accounting-ok": "Renumeración de asientos completada",
+    "renumber-accounting-p": "Renumera los asientos por fecha, de menor a mayor",
+    "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
     "repeat-new-password": "Repite la contraseña",
     "reply": "Respuesta",
     "report": "Informe",
