--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -150,6 +150,7 @@
     "bank-accounts": "Banku kontuak",
     "bank-mandate": "Bankuko agindua",
     "bank-mandate-date": "Aginduaren data",
+    "banking-movements": "Banku-mugimenduak",
     "barcode": "Barra-kodea",
     "bcc": "BCC",
     "big": "Handia",
@@ -766,6 +767,7 @@
     "lang-code": "Hizkuntza kodea",
     "language": "Hizkuntza",
     "languages-ca_ES": "Katalan",
+    "languages-cs_CZ": "Checo",
     "languages-de_DE": "Aleman",
     "languages-en_EN": "Ingeles",
     "languages-es_AR": "Gaztelania (Argentina)",
@@ -784,6 +786,8 @@
     "languages-fr_FR": "Frantsez",
     "languages-gl_ES": "Galiziera",
     "languages-it_IT": "Italiera",
+    "languages-pl_PL": "Polaco",
+    "languages-pt_BR": "Portugués (Brasil)",
     "languages-pt_PT": "Portuges",
     "languages-va_ES": "Valentziera",
     "last-activity": "Azken konexioa",
@@ -1169,6 +1173,8 @@
     "renumber-accounting": "Idazpenei zenbaki berriak eman",
     "renumber-accounting-error": "Errore bat gertatu da %exerciseCode%. ekitaldiko idazpenei zenbaki berriak ematean",
     "renumber-accounting-ok": "Idazpenen zenbaki berri ematea bukatu da",
+    "renumber-accounting-p": "Renumera los asientos por fecha, de menor a mayor",
+    "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
     "repeat-new-password": "Pasahitza berriz sartu",
     "reply": "Erantzuna",
     "report": "Txostena",
