--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -150,6 +150,7 @@
     "bank-accounts": "comptes bancaires",
     "bank-mandate": "Mandat",
     "bank-mandate-date": "Date du mandat",
+    "banking-movements": "Movimientos bancarios",
     "barcode": "code à barre",
     "bcc": "CCI",
     "big": "Grand",
@@ -766,6 +767,7 @@
     "lang-code": "Code de langue",
     "language": "Langue",
     "languages-ca_ES": "Catalan",
+    "languages-cs_CZ": "Checo",
     "languages-de_DE": "Allemand",
     "languages-en_EN": "Anglais",
     "languages-es_AR": "Espagnol (Argentine)",
@@ -784,6 +786,8 @@
     "languages-fr_FR": "Français (France)",
     "languages-gl_ES": "Galicien",
     "languages-it_IT": "Italien",
+    "languages-pl_PL": "Polaco",
+    "languages-pt_BR": "Portugués (Brasil)",
     "languages-pt_PT": "Portuguais",
     "languages-va_ES": "Valencien",
     "last-activity": "Dernière Activité",
@@ -1169,6 +1173,8 @@
     "renumber-accounting": "Renuméroter les sièges",
     "renumber-accounting-error": "Une erreur s'est produite lors de la renumérotation des entrées de l'année fiscale %exerciseCode%",
     "renumber-accounting-ok": "Renumérotation des sièges terminés",
+    "renumber-accounting-p": "Renumera los asientos por fecha, de menor a mayor",
+    "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
     "repeat-new-password": "Répéter mot de passe",
     "reply": "Respuesta",
     "report": "Rapport",
