--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -150,6 +150,7 @@
     "bank-accounts": "Contas bancarias",
     "bank-mandate": "Mandato",
     "bank-mandate-date": "Data mandato",
+    "banking-movements": "Movementos bancarios",
     "barcode": "Código de barras",
     "bcc": "BCC",
     "big": "Grande",
@@ -766,6 +767,7 @@
     "lang-code": "Código de idioma",
     "language": "Idioma",
     "languages-ca_ES": "Catalán",
+    "languages-cs_CZ": "Checo",
     "languages-de_DE": "Alemán",
     "languages-en_EN": "Inglés",
     "languages-es_AR": "Español (Arxentina)",
@@ -784,6 +786,8 @@
     "languages-fr_FR": "Francés",
     "languages-gl_ES": "Galego",
     "languages-it_IT": "Italiano",
+    "languages-pl_PL": "Polaco",
+    "languages-pt_BR": "Portugués (Brasil)",
     "languages-pt_PT": "Portugués",
     "languages-va_ES": "Valenciano",
     "last-activity": "Última actividade",
@@ -1169,6 +1173,8 @@
     "renumber-accounting": "Renumerar asentos",
     "renumber-accounting-error": "Produciuse un erro durante a renumeración de entradas no exercicio fiscal %exerciseCode%",
     "renumber-accounting-ok": "Renumeración de asentos completada",
+    "renumber-accounting-p": "Renumera los asientos por fecha, de menor a mayor",
+    "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
     "repeat-new-password": "Repite o contrasinal",
     "reply": "Resposta",
     "report": "Informe",
