--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -150,6 +150,7 @@
     "bank-accounts": "conto in banca",
     "bank-mandate": "bank-mandate",
     "bank-mandate-date": "Data obbligatoria",
+    "banking-movements": "Movimientos bancarios",
     "barcode": "Codice a barre",
     "bcc": "BCC",
     "big": "big",
@@ -766,6 +767,7 @@
     "lang-code": "Codice della lingua",
     "language": "Lingua",
     "languages-ca_ES": "languages-ca_ES",
+    "languages-cs_CZ": "Checo",
     "languages-de_DE": "languages-de_DE",
     "languages-en_EN": "languages-en_EN",
     "languages-es_AR": "Español (Argentina)",
@@ -784,6 +786,8 @@
     "languages-fr_FR": "languages-fr_FR",
     "languages-gl_ES": "languages-gl_ES",
     "languages-it_IT": "Italiano",
+    "languages-pl_PL": "Polaco",
+    "languages-pt_BR": "Portugués (Brasil)",
     "languages-pt_PT": "languages-pt_PT",
     "languages-va_ES": "languages-va_ES",
     "last-activity": "L'ultima attività",
@@ -1169,6 +1173,8 @@
     "renumber-accounting": "Renumber Accounting",
     "renumber-accounting-error": "An error occurred while renumber accounting entries in financial year %exerciseCode%",
     "renumber-accounting-ok": "Renumbering of accounting entries completed",
+    "renumber-accounting-p": "Renumera los asientos por fecha, de menor a mayor",
+    "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
     "repeat-new-password": "Ripetere la password",
     "reply": "risposta",
     "report": "report",
