--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -150,6 +150,7 @@
     "bank-accounts": "contas bancárias",
     "bank-mandate": "bank-mandate",
     "bank-mandate-date": "Data obrigatória",
+    "banking-movements": "Movimientos bancarios",
     "barcode": "Código de barras",
     "bcc": "BCC",
     "big": "Grande",
@@ -766,6 +767,7 @@
     "lang-code": "Código de idioma",
     "language": "Língua",
     "languages-ca_ES": "Catalão",
+    "languages-cs_CZ": "Checo",
     "languages-de_DE": "Alemão",
     "languages-en_EN": "Inglês",
     "languages-es_AR": "Español (Argentina)",
@@ -784,6 +786,8 @@
     "languages-fr_FR": "Franc",
     "languages-gl_ES": "Galego",
     "languages-it_IT": "Italiano",
+    "languages-pl_PL": "Polaco",
+    "languages-pt_BR": "Portugués (Brasil)",
     "languages-pt_PT": "Português (Portugal)",
     "languages-va_ES": "languages-va_ES",
     "last-activity": "Última atividade",
@@ -1169,6 +1173,8 @@
     "renumber-accounting": "Renumber Accounting",
     "renumber-accounting-error": "An error occurred while renumber accounting entries in financial year %exerciseCode%",
     "renumber-accounting-ok": "Renumbering of accounting entries completed",
+    "renumber-accounting-p": "Renumera los asientos por fecha, de menor a mayor",
+    "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
     "repeat-new-password": "Repita a senha",
     "reply": "Respuesta",
     "report": "Relatório",
