--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -150,6 +150,7 @@
     "bank-accounts": "Contes Bancaris",
     "bank-mandate": "Mandat",
     "bank-mandate-date": "Data Mandat",
+    "banking-movements": "Movimientos bancarios",
     "barcode": "Còdic de barres",
     "bcc": "CCO",
     "big": "Gran",
@@ -766,6 +767,7 @@
     "lang-code": "Còdic de l'idioma",
     "language": "Idioma",
     "languages-ca_ES": "Català",
+    "languages-cs_CZ": "Checo",
     "languages-de_DE": "Alemà",
     "languages-en_EN": "English",
     "languages-es_AR": "Español (Argentina)",
@@ -784,6 +786,8 @@
     "languages-fr_FR": "Français",
     "languages-gl_ES": "Galego",
     "languages-it_IT": "Italiano",
+    "languages-pl_PL": "Polaco",
+    "languages-pt_BR": "Portugués (Brasil)",
     "languages-pt_PT": "Portugués",
     "languages-va_ES": "Valencià",
     "last-activity": "Última activitat",
@@ -1169,6 +1173,8 @@
     "renumber-accounting": "Renumerar els assentaments",
     "renumber-accounting-error": "S'ha produït un erro durant la renumeració dels assentaments de l'eixercici fiscal %exerciseCode%",
     "renumber-accounting-ok": "La renumeració dels assentamens ha acabat",
+    "renumber-accounting-p": "Renumera los asientos por fecha, de menor a mayor",
+    "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
     "repeat-new-password": "Repetix la contrasenya",
     "reply": "Respuesta",
     "report": "Informe",
