--- a/Core/Translation/es_PA.json
+++ b/Core/Translation/es_PA.json
@@ -454,6 +454,7 @@
     "dont-sell-below-cost": "No vender por debajo de costo",
     "download": "Descargar",
     "download-completed": "Descargar completada",
+    "download-error": "Error al descargar. Código %status% - %error%",
     "download-xml": "Descargar XML",
     "downloads": "Descargas",
     "drag": "Arrastrar",
