Añadido filtro por identificador fiscal a los listados de clientes y proveedores.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -454,7 +454,7 @@
     "dont-sell-below-cost": "No vendre per sota del cost",
     "download": "Descarregar",
     "download-completed": "Descàrrega completada",
-    "download-error": "Error al descargar. Código %status% - %error%",
+    "download-error": "Error en descarregar. Codi %status% - %error%",
     "download-xml": "Descarregar XML",
     "downloads": "Descàrregues",
     "drag": "Arrossegar",
@@ -768,7 +768,7 @@
     "lang-code": "Codi d'idioma",
     "language": "Llenguatge",
     "languages-ca_ES": "Català",
-    "languages-cs_CZ": "Checo",
+    "languages-cs_CZ": "Txec",
     "languages-de_DE": "Alemany",
     "languages-en_EN": "Anglès",
     "languages-es_AR": "Espanyol (Argentina)",
@@ -787,8 +787,8 @@
     "languages-fr_FR": "Francès",
     "languages-gl_ES": "Gallec",
     "languages-it_IT": "Italià",
-    "languages-pl_PL": "Polaco",
-    "languages-pt_BR": "Portugués (Brasil)",
+    "languages-pl_PL": "Polonès",
+    "languages-pt_BR": "Portuguès (Brasil)",
     "languages-pt_PT": "Portuguès",
     "languages-va_ES": "Valencià",
     "last-activity": "Última activitat",
@@ -1174,8 +1174,8 @@
     "renumber-accounting": "Renumerar Assentaments",
     "renumber-accounting-error": "Hi ha hagut un error durant la renumeració d'assentaments en l'exercici fiscal %exerciseCode%",
     "renumber-accounting-ok": "Renumeració d'assentaments completada",
-    "renumber-accounting-p": "Renumera los asientos por fecha, de menor a mayor",
-    "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
+    "renumber-accounting-p": "Renumera els seients per data, de més petit a més gran",
+    "renumber-invoices-p": "Renumera les factures en base a la data, de mes petit a més gran",
     "repeat-new-password": "Repeteix la contrasenya",
     "reply": "Respuesta",
     "report": "Informe",
