--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -454,7 +454,7 @@
     "dont-sell-below-cost": "Don't sell below cost",
     "download": "Download",
     "download-completed": "Download completed",
-    "download-error": "Error al descargar. Código %status% - %error%",
+    "download-error": "Download error. Code %status% - %error%",
     "download-xml": "Download XML",
     "downloads": "Downloads",
     "drag": "Drag",
@@ -1174,8 +1174,8 @@
     "renumber-accounting": "Renumber Accounting",
     "renumber-accounting-error": "An error occurred while renumber accounting entries in financial year %exerciseCode%",
     "renumber-accounting-ok": "Renumbering of accounting entries completed",
-    "renumber-accounting-p": "Renumera los asientos por fecha, de menor a mayor",
-    "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
+    "renumber-accounting-p": "Renumbers entries by date, from lowest to highest",
+    "renumber-invoices-p": "Renumber invoices based on date, from lowest to highest",
     "repeat-new-password": "Repeat password",
     "reply": "Reply",
     "report": "Report",
