--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1044,6 +1044,7 @@
     "phone": "Telèfon",
     "phone2": "Telèfon 2",
     "phones": "Telèfons",
+    "php-extension-needed": "Se requiere la extensión %extension% en la configuración de PHP",
     "php-extension-not-found": "No tens l'extensió %extension% de PHP instal·lada.",
     "php-support-end": "El suport per a PHP %current% acabarà aviat. Si us plau, actualitza PHP a la versió %min% o superior.",
     "physical-stock": "Estoc físic",
