--- a/Core/Translation/es_GT.json
+++ b/Core/Translation/es_GT.json
@@ -1044,6 +1044,7 @@
     "phone": "Teléfono",
     "phone2": "Teléfono 2",
     "phones": "Teléfonos",
+    "php-extension-needed": "Se requiere la extensión %extension% en la configuración de PHP",
     "php-extension-not-found": "No tienes la extensión %extension% de PHP instalada.",
     "php-support-end": "El soporte para PHP %current% terminará pronto. Por favor, actualiza PHP a la versión %min% o superior.",
     "physical-stock": "Stock físico",
