--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1044,6 +1044,7 @@
     "phone": "Telefonoa",
     "phone2": "2. telefonoa",
     "phones": "Telefonoak",
+    "php-extension-needed": "Se requiere la extensión %extension% en la configuración de PHP",
     "php-extension-not-found": "%extension% PHP gehigarria instalatu gabe duzu.",
     "php-support-end": "PHP %current%-(r)en laguntza laster amaituko da. PHP %min% bertsiora eguneratu mesedez.",
     "physical-stock": "Stock fisikoa",
