--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1044,6 +1044,7 @@
     "phone": "telefono",
     "phone2": "Telefono 2",
     "phones": "Telefoni",
+    "php-extension-needed": "Se requiere la extensión %extension% en la configuración de PHP",
     "php-extension-not-found": "You don't have the %extension% PHP extension installed.",
     "php-support-end": "php-support-end",
     "physical-stock": "Stock fisico",
