Tarea #1292 - Filtrar atributos en selector de variables.

--- a/Core/Translation/es_ES.json
+++ b/Core/Translation/es_ES.json
@@ -255,6 +255,7 @@
     "columns": "Columnas",
     "combination-code": "Código de combinación",
     "combinations": "Combinaciones",
+    "combo-number": "Número de combo",
     "commercial-terms": "Términos comerciales",
     "commission": "Comisión",
     "commission-general-info": "Relación de porcentajes de comisión que se aplican en la venta de productos. Se aplicará el porcentaje con las condiciones más restrictivas o concretas de las informadas.",
