Corregidos los cambios en atributos de variantes.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1222,6 +1222,7 @@
     "select-plugin-zip-file": "Wählen Sie die Plugin-Zip-Datei:",
     "select-user": "Select User",
     "selected-quantity": "approve-quantity",
+    "selector-number": "Selector",
     "send": "send",
     "send-invoices": "Enviar facturas",
     "send-mail": "Send mail",
