--- a/Core/Translation/es_ES.json
+++ b/Core/Translation/es_ES.json
@@ -255,7 +255,6 @@
     "columns": "Columnas",
     "combination-code": "Código de combinación",
     "combinations": "Combinaciones",
-    "combo-number": "Número de combo",
     "commercial-terms": "Términos comerciales",
     "commission": "Comisión",
     "commission-general-info": "Relación de porcentajes de comisión que se aplican en la venta de productos. Se aplicará el porcentaje con las condiciones más restrictivas o concretas de las informadas.",
@@ -1223,6 +1222,7 @@
     "select-plugin-zip-file": "Seleccionar plugin (zip):",
     "select-user": "Seleccionar usuario",
     "selected-quantity": "Cant. seleccionada",
+    "selector-number": "Selector",
     "send": "Enviar",
     "send-invoices": "Enviar facturas",
     "send-mail": "Enviar correo",
