--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1222,6 +1222,7 @@
     "select-plugin-zip-file": "Hautatu plugin zip fitxategia:",
     "select-user": "Aukeratu erabiltzailea",
     "selected-quantity": "Hautatutako kantitatea",
+    "selector-number": "Selector",
     "send": "Bidali",
     "send-invoices": "Fakturak bidali",
     "send-mail": "Emaila bidali",
