--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1222,6 +1222,7 @@
     "select-plugin-zip-file": "Sélectionnez le fichier ZIP du module :",
     "select-user": "Sélectionner un utilisateur",
     "selected-quantity": "Qté sélectionnée",
+    "selector-number": "Selector",
     "send": "Envoyer",
     "send-invoices": "Enviar facturas",
     "send-mail": "Evoyer e-mail",
