--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1222,6 +1222,7 @@
     "select-plugin-zip-file": "Seleccione o ficheiro zip de extensión:",
     "select-user": "Seleccionar Usuario",
     "selected-quantity": "Cantidade seleccionada",
+    "selector-number": "Selector",
     "send": "Enviar",
     "send-invoices": "Enviar facturas",
     "send-mail": "Enviar correo",
