--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1222,6 +1222,7 @@
     "select-plugin-zip-file": "Seleziona il file zip del plugin:",
     "select-user": "Seleziona Utente",
     "selected-quantity": "Quantità selezionata",
+    "selector-number": "Selector",
     "send": "Invia",
     "send-invoices": "Enviar facturas",
     "send-mail": "Send mail",
