--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1222,6 +1222,7 @@
     "select-plugin-zip-file": "Selecione o arquivo zip do plugin:",
     "select-user": "Select User",
     "selected-quantity": "approve-quantity",
+    "selector-number": "Selector",
     "send": "send",
     "send-invoices": "Enviar facturas",
     "send-mail": "Enviar email",
