--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1222,6 +1222,7 @@
     "select-plugin-zip-file": "Selecciona el plugin (zip):",
     "select-user": "Selecciona l'usuari",
     "selected-quantity": "Quant. seleccionada",
+    "selector-number": "Selector",
     "send": "Enviar",
     "send-invoices": "Enviar facturas",
     "send-mail": "Enviar el correu",
