--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1222,6 +1222,7 @@
     "select-plugin-zip-file": "Seleccionar plugin (zip):",
     "select-user": "Seleccionar Usuari",
     "selected-quantity": "Quant. seleccionada",
+    "selector-number": "Selector",
     "send": "Enviar",
     "send-invoices": "Enviar factures",
     "send-mail": "Enviar correu",
