--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1044,7 +1044,7 @@
     "phone": "Phone",
     "phone2": "Phone 2",
     "phones": "Phones",
-    "php-extension-needed": "Se requiere la extensión %extension% en la configuración de PHP",
+    "php-extension-needed": "The extension %extension% is required in the PHP configuration",
     "php-extension-not-found": "You don't have the %extension% PHP extension installed.",
     "php-support-end": "Support for PHP %current% will end soon. Please update PHP to version %min% or higher.",
     "physical-stock": "Physical stock",
@@ -1222,6 +1222,7 @@
     "select-plugin-zip-file": "Select plugin zip file:",
     "select-user": "Select User",
     "selected-quantity": "Selected Qty",
+    "selector-number": "Selector",
     "send": "Send",
     "send-invoices": "Send invoices",
     "send-mail": "Send mail",
