--- a/Core/Translation/es_PE.json
+++ b/Core/Translation/es_PE.json
@@ -1222,6 +1222,7 @@
     "select-plugin-zip-file": "Seleccionar plugin (zip):",
     "select-user": "Seleccionar usuario",
     "selected-quantity": "Cant. seleccionada",
+    "selector-number": "Selector",
     "send": "Enviar",
     "send-invoices": "Enviar facturas",
     "send-mail": "Enviar correo",
