--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -47,7 +47,7 @@
     "accounting-reports": "Informes de contabilidade",
     "accounting-within-regularization": "O asento pertence a unha regularización do imposto %tax%. Non pode ser borrado.",
     "accounts": "Contas",
-    "accrual-date": "Fecha devengo",
+    "accrual-date": "Data devengo",
     "action": "Acción",
     "actions": "Accións",
     "active": "Activo",
